--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div class="container">
-    <router-outlet></router-outlet>
+<div (window:resize)="onResize($event)">
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
 </div>
