client page updates, footer and header added

--- a/client/src/app/private/components/select-users/select-users.component.html
+++ b/client/src/app/private/components/select-users/select-users.component.html
@@ -1,4 +1,4 @@
-<mat-form-field>
+<mat-form-field color="accent">
     <input matInput type="text" placeholder="Search for User by Username" [matAutocomplete]="auto"
         [formControl]="searchUsername">
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="autocompleteDisplay"
