--- a/client/src/app/private/pages/private-pages-container/private-pages-container.component.html
+++ b/client/src/app/private/pages/private-pages-container/private-pages-container.component.html
@@ -17,5 +17,7 @@
 </ng-template>
 
 <ng-template #router>
-    <router-outlet></router-outlet>
+    <div class="content-container">
+        <router-outlet></router-outlet>
+    </div>
 </ng-template>
