--- a/client/src/app/public/pages/forgot-password/complete/complete.component.html
+++ b/client/src/app/public/pages/forgot-password/complete/complete.component.html
@@ -7,7 +7,7 @@
                 </mat-card-title>
 
                 <div class="col-12 text-center">
-                    <mat-icon>check_circle_outline</mat-icon>
+                    <app-icon icon="check_circle_outline"></app-icon>
                 </div>
 
                 <div class="offset-sm-3 col-sm-6 offset-1 col-10 text-center">
