--- a/client/src/app/private/components/chat-room/chat-room.component.html
+++ b/client/src/app/private/components/chat-room/chat-room.component.html
@@ -4,7 +4,7 @@
         <span style="display: flex; flex-direction: row; align-items: center; justify-content: space-between;">
             <h2>{{chatRoom.name}}</h2>
             <span style="display: flex; flex-direction: row; align-items: center;">
-                <mat-icon>event</mat-icon>
+                <app-icon icon="event"></app-icon>
                 <p style="margin-left: 10px;">{{chatRoom.updatedAt | date}}</p>
             </span>
         </span>
@@ -23,12 +23,12 @@
     </div>
     <!-- add message -->
     <div style="position: absolute; bottom: 0; display: flex; flex-direction: row; align-items: center;">
-        <mat-form-field style="width: 350px;">
+        <mat-form-field color="accent" style="width: 350px;">
             <input matInput type="text" [formControl]="chatMessage">
         </mat-form-field>
         <button mat-button [disabled]="!chatMessage.valid" (click)="sendMessage()">
             <span style="display: flex; flex-direction: row; align-items: center;">
-                <mat-icon style="margin-left: 20px;">send</mat-icon>
+                <app-icon icon="send" style="margin-left: 20px;"></app-icon>
                 <p style="margin-left: 10px;">Send</p>
             </span>
         </button>
