--- a/client/src/app/private/components/page-footer/page-footer.component.html
+++ b/client/src/app/private/components/page-footer/page-footer.component.html
@@ -1,6 +1,36 @@
-<div>
-    <ng-content></ng-content>
+<div class="vh-100 d-flex flex-column">
+    <div class="flex-grow-1 overflow-y-scroll">
+        <ng-content></ng-content>
+    </div>
+    <div id="footer" class="row mx-0 w-100 flex-shrink-1 min-h-">
+        <ng-container *ngTemplateOutlet="buttonTemplate;context:{
+                icon: 'videogame_asset', tooltipText: 'Games', route: './private/public-rooms'
+            }">
+        </ng-container>
+        <ng-container *ngTemplateOutlet="buttonTemplate;context:{
+            icon: 'note', tooltipText: 'Notes', route: './private/notes'
+        }">
+        </ng-container>
+        <ng-container *ngTemplateOutlet="buttonTemplate;context:{
+            icon: 'message', tooltipText: 'My Games', route: './private/my-rooms'
+        }">
+        </ng-container>
+        <ng-container *ngTemplateOutlet="buttonTemplate;context:{
+            icon: 'people', tooltipText: 'Friends', route: './private/friends'
+                }">
+        </ng-container>
+        <ng-container *ngTemplateOutlet="buttonTemplate;context:{
+            icon: 'person_outline', tooltipText: 'Profile', route: './private/profile'
+        }">
+        </ng-container>
+    </div>
 </div>
-<div>
-    <p>page-footer works!</p>
-</div>
+
+<ng-template #buttonTemplate let-icon="icon" let-tooltipText="tooltipText" let-route="route">
+    <div class="button col p-0 h-100" [matTooltip]="tooltipText">
+        <button mat-stroked-button color="primary" type="button" class="p-0 min-w-100 rounded-0 h-100"
+            (click)="goToRoute(route)">
+            <app-icon [icon]="icon" size="50"></app-icon>
+        </button>
+    </div>
+</ng-template>
