--- a/client/src/app/private/components/page-header/page-header.component.html
+++ b/client/src/app/private/components/page-header/page-header.component.html
@@ -1,6 +1,39 @@
-<div>
-    <p>page-header works!</p>
+<div class="vh-100 d-flex flex-column">
+    <div id="header" class="row mx-0 w-100 flex-shrink-1 min-h-60px">
+        <ng-container *ngTemplateOutlet="headerTemplate"></ng-container>
+    </div>
+    <div class="flex-grow-1">
+        <ng-content></ng-content>
+    </div>
 </div>
-<div>
-    <ng-content></ng-content>
-</div>
+
+<ng-template #headerTemplate>
+    <ng-container *ngTemplateOutlet="buttonTemplate;context:{
+        icon: 'videogame_asset', tooltipText: 'Games', route: './private/public-rooms'
+    }">
+    </ng-container>
+    <ng-container *ngTemplateOutlet="buttonTemplate;context:{
+    icon: 'note', tooltipText: 'Notes', route: './private/notes'
+}">
+    </ng-container>
+    <ng-container *ngTemplateOutlet="buttonTemplate;context:{
+    icon: 'message', tooltipText: 'My Games', route: './private/my-rooms'
+}">
+    </ng-container>
+    <ng-container *ngTemplateOutlet="buttonTemplate;context:{
+    icon: 'people', tooltipText: 'Friends', route: './private/friends'
+        }">
+    </ng-container>
+    <ng-container *ngTemplateOutlet="buttonTemplate;context:{
+    icon: 'person_outline', tooltipText: 'Profile', route: './private/profile'
+}">
+    </ng-container>
+</ng-template>
+
+<ng-template #buttonTemplate let-icon="icon" let-tooltipText="tooltipText" let-route="route">
+    <div class="button p-0" [matTooltip]="tooltipText">
+        <button mat-button color="primary" type="button" class="p-0 min-w-100 rounded-0" (click)="goToRoute(route)">
+            <app-icon [icon]="icon"></app-icon>
+        </button>
+    </div>
+</ng-template>
