--- a/client/src/app/private/pages/create-room/create-room.component.html
+++ b/client/src/app/private/pages/create-room/create-room.component.html
@@ -9,14 +9,14 @@
 
                 <mat-card-content>
                     <form [formGroup]="form" (ngSubmit)="create()">
-                        <mat-form-field>
+                        <mat-form-field color="accent">
                             <input matInput type="text" placeholder="Name" formControlName="name">
                             <mat-error *ngIf="name.touched && name.hasError('required')">
                                 Name is required
                             </mat-error>
                         </mat-form-field>
 
-                        <mat-form-field>
+                        <mat-form-field color="accent">
                             <input matInput type="text" placeholder="Description" formControlName="description">
                         </mat-form-field>
 
