--- a/client/src/app/private/components/select-users/select-users.component.html
+++ b/client/src/app/private/components/select-users/select-users.component.html
@@ -1,25 +1,28 @@
-<mat-form-field color="accent">
-    <input matInput type="text" placeholder="Search for User by Username" [matAutocomplete]="auto"
-        [formControl]="searchUsername">
-    <mat-autocomplete #auto="matAutocomplete" [displayWith]="autocompleteDisplay"
-        (optionSelected)="setSelectedUser($event.option.value)">
-        <ng-container>
-            <mat-option *ngFor="let user of filteredUsers" [value]="user">
-                <span>{{user.username}}</span>
-                <small>#{{user.id}}</small>
-            </mat-option>
-        </ng-container>
-    </mat-autocomplete>
-</mat-form-field>
-<button mat-button type="button" (click)="emitAddUser()" [disabled]="!selectedUser">Add User</button>
+<div class="row">
+    <mat-form-field color="accent" class="col-sm-9 col-7">
+        <input matInput type="text" placeholder="Search for User" [matAutocomplete]="auto"
+            [formControl]="searchUsername">
+        <mat-autocomplete #auto="matAutocomplete" [displayWith]="autocompleteDisplay"
+            (optionSelected)="setSelectedUser($event.option.value)">
+            <ng-container>
+                <mat-option *ngFor="let user of filteredUsers" [value]="user">
+                    <span>{{user.username}}</span>
+                    <small>#{{user.id}}</small>
+                </mat-option>
+            </ng-container>
+        </mat-autocomplete>
+    </mat-form-field>
 
-<mat-chip-list *ngIf="users.length > 0; else noUsers">
-    <mat-chip *ngFor="let user of users" (removed)="emitRemoveUser(user)">
-        {{user.username}}
-        <mat-icon matChipRemove>cancel</mat-icon>
-    </mat-chip>
-</mat-chip-list>
+    <div class="col-sm-3 col-5 pl-0 text-sm-left text-right align-self-center">
+        <button mat-stroked-button type="button" (click)="emitAddUser()" [disabled]="!selectedUser">Add User</button>
+    </div>
 
-<ng-template #noUsers>
-    <mat-error>No other users added</mat-error>
-</ng-template>
+    <div class="col-12">
+        <mat-chip-list *ngIf="users.length > 0">
+            <mat-chip *ngFor="let user of users" (removed)="emitRemoveUser(user)">
+                {{user.username}}
+                <mat-icon matChipRemove>cancel</mat-icon>
+            </mat-chip>
+        </mat-chip-list>
+    </div>
+</div>
