--- a/client/src/app/private/pages/create-room/create-room.component.html
+++ b/client/src/app/private/pages/create-room/create-room.component.html
@@ -1,39 +1,42 @@
-<div class="container">
-    <div>
-        <div class="dashboard">
-            <a [routerLink]="['../dashboard']" routerLinkActive="router-link-active">Go to Dashboard</a>
-        </div>
-        <div>
-            <mat-card>
-                <mat-card-title>Create Chatroom</mat-card-title>
+<mat-card>
+    <mat-card-content>
+        <div class="row">
+            <mat-card-title class="col-12">
+                Create Room
+            </mat-card-title>
 
-                <mat-card-content>
-                    <form [formGroup]="form" (ngSubmit)="create()">
-                        <mat-form-field color="accent">
-                            <input matInput type="text" placeholder="Name" formControlName="name">
-                            <mat-error *ngIf="name.touched && name.hasError('required')">
-                                Name is required
-                            </mat-error>
-                        </mat-form-field>
+            <form class="col-12" [formGroup]="form" (ngSubmit)="create()">
+                <div class="row">
+                    <mat-form-field color="accent" class="col-12 py-1">
+                        <input matInput type="text" placeholder="Name" formControlName="name">
+                        <mat-error *ngIf="name.touched && name.hasError('required')">
+                            Name is required
+                        </mat-error>
+                    </mat-form-field>
 
-                        <mat-form-field color="accent">
-                            <input matInput type="text" placeholder="Description" formControlName="description">
-                        </mat-form-field>
+                    <mat-form-field color="accent" class="col-12 py-1">
+                        <input matInput type="text" placeholder="Description" formControlName="description">
+                    </mat-form-field>
 
-                        <app-select-users [users]="users.value" (addUser)="addUser($event)" (removeUser)="removeUser($event)"></app-select-users>
+                    <div class="col-12">
+                        <app-select-users [users]="users.value" (addUser)="addUser($event)"
+                            (removeUser)="removeUser($event)">
+                        </app-select-users>
+                    </div>
 
+                    <div class="col-12">
                         <mat-hint *ngIf="!form.valid">
                             <small>Please fill out all required information</small>
                         </mat-hint>
+                    </div>
 
-                        <div class="button">
-                            <button mat-button type="submit" [disabled]="!form.valid">
-                                Create Chatroom
-                            </button>
-                        </div>
-                    </form>
-                </mat-card-content>
-            </mat-card>
+                    <div class="col-12 text-center">
+                        <button mat-stroked-button color="primary" type="submit" [disabled]="!form.valid">
+                            Create Room
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
-    </div>
-</div>
+    </mat-card-content>
+</mat-card>
