--- a/client/src/app/public/pages/forgot-password/new-password/new-password.component.html
+++ b/client/src/app/public/pages/forgot-password/new-password/new-password.component.html
@@ -14,7 +14,7 @@
                 </mat-card-title>
                 <form class="col-12" [formGroup]="form" (ngSubmit)="setNewPassword()">
                     <div class="row">
-                        <mat-form-field color="accent" class="col-sm-6 col-12 py-1">
+                        <mat-form-field color="accent" class="col-sm-6 col-12">
                             <input matInput type="password" id="password" placeholder="New Password"
                                 formControlName="password" autocomplete="off">
                             <mat-error *ngIf="password.touched && password.hasError('required')">
@@ -22,7 +22,7 @@
                             </mat-error>
                         </mat-form-field>
 
-                        <mat-form-field color="accent" class="col-sm-6 col-12 py-1">
+                        <mat-form-field color="accent" class="col-sm-6 col-12">
                             <input matInput type="password" id="passwordConfirm" placeholder="Confirm New Password"
                                 formControlName="passwordConfirm" autocomplete="off">
                             <mat-error
