--- a/client/src/app/private/components/room-list-item/room-list-item.component.html
+++ b/client/src/app/private/components/room-list-item/room-list-item.component.html
@@ -3,19 +3,17 @@
         <div class="row room-list-item">
             <div class="col-6 title">
                 <span class="font-weight-bold">Title: </span>
-                <span>{{room?.name}}</span>
+                <span>{{room?.title}}</span>
             </div>
             <div class="col-6 created-by">
                 <span class="font-weight-bold">Created By: </span>
                 <span>{{room?.creator?.username}}</span>
             </div>
-            <div class="col-8 description">
-                <ng-container *ngIf="room?.description">
-                    <span class="font-weight-bold">Description: </span>
-                    <span>{{room?.description}}</span>
-                </ng-container>
+            <div *ngIf="room?.description" class="col-7 description">
+                <span class="font-weight-bold">Description: </span>
+                <span>{{room?.description}}</span>
             </div>
-            <div class="col-4 button">
+            <div class="text-right" [ngClass]="{'col-5' : room?.description, 'col-12' : !room?.description}">
                 <button mat-stroked-button type="button" (click)="buttonClicked($event)">
                     <div class="row mx-0">
                         <div>{{buttonText}}</div>
