--- a/client/src/app/private/pages/profile/profile.component.html
+++ b/client/src/app/private/pages/profile/profile.component.html
@@ -1,1 +1,24 @@
-<p>profile works!</p>
+<mat-card>
+    <mat-card-content>
+        <div class="row">
+
+            <mat-card-title class="col-12 text-center">
+                {{user?.username}}
+            </mat-card-title>
+
+            <hr class="title-break w-100">
+
+            <div class="col-12 text-center">
+                <button mat-stroked-button color="warn" type="button" (click)="logOut()">
+                    <div class="row mx-0">
+                        <div>Log out</div>
+                        <div class="pb-1">
+                            <app-icon icon="meeting_room"></app-icon>
+                        </div>
+                    </div>
+                </button>
+            </div>
+
+        </div>
+    </mat-card-content>
+</mat-card>
