--- a/client/src/app/public/pages/create-account/create-account.component.html
+++ b/client/src/app/public/pages/create-account/create-account.component.html
@@ -12,7 +12,8 @@
         </mat-card-title>
         <form class="col-12" [formGroup]="form" (ngSubmit)="createUser()">
             <div class="row">
-                <mat-form-field color="accent" class="col-12 py-1">
+                <mat-form-field color="accent" class="col-12"
+                    [ngClass]="{'pb-2': email.touched && email.hasError('required')}">
                     <input matInput type="email" id="email" placeholder="Email" formControlName="email">
                     <mat-error *ngIf="email.touched && email.hasError('required')">
                         Email is required
@@ -22,7 +23,7 @@
                     </mat-error>
                 </mat-form-field>
 
-                <mat-form-field color="accent" class="col-12 py-1">
+                <mat-form-field color="accent" class="col-12">
                     <input matInput type="text" id="username" placeholder="Username" formControlName="username">
                     <mat-error *ngIf="username.touched && username.hasError('required')">
                         Username is required
@@ -32,14 +33,14 @@
                     </mat-error>
                 </mat-form-field>
 
-                <mat-form-field color="accent" class="col-sm-6 col-12 py-1">
+                <mat-form-field color="accent" class="col-sm-6 col-12">
                     <input matInput type="password" id="password" placeholder="Password" formControlName="password">
                     <mat-error *ngIf="password.touched && password.hasError('required')">
                         Password is required
                     </mat-error>
                 </mat-form-field>
 
-                <mat-form-field color="accent" class="col-sm-6 col-12 py-1">
+                <mat-form-field color="accent" class="col-sm-6 col-12">
                     <input matInput type="password" id="passwordConfirm" placeholder="Confirm Password"
                         formControlName="passwordConfirm">
                     <mat-error *ngIf="passwordConfirm.touched && passwordConfirm.hasError('required')">
@@ -53,7 +54,7 @@
                     </mat-error>
                 </div>
 
-                <div class="col-12">
+                <div class="col-12 pt-2">
                     <mat-hint>
                         <small>
                             If you forget your password, the following security question and answer will
@@ -62,7 +63,7 @@
                     </mat-hint>
                 </div>
 
-                <mat-form-field color="accent" class="col-12 py-1">
+                <mat-form-field color="accent" class="col-12">
                     <mat-label>Select Security Question</mat-label>
                     <mat-select formControlName="securityQuestion" id="securityQuestion">
                         <mat-option *ngFor="let option of securityQuestions" [value]="option">
@@ -74,7 +75,7 @@
                     </mat-error>
                 </mat-form-field>
 
-                <mat-form-field color="accent" class="col-sm-6 col-12 py-1">
+                <mat-form-field color="accent" class="col-sm-6 col-12">
                     <input matInput type="password" id="securityAnswer" placeholder="Security Answer"
                         formControlName="securityAnswer" autocomplete="off">
                     <mat-error *ngIf="securityAnswer.touched && securityAnswer.hasError('required')">
@@ -82,7 +83,7 @@
                     </mat-error>
                 </mat-form-field>
 
-                <mat-form-field color="accent" class="col-sm-6 col-12 py-1">
+                <mat-form-field color="accent" class="col-sm-6 col-12">
                     <input matInput type="password" id="securityAnswerConfirm" placeholder="Confirm Security Answer"
                         formControlName="securityAnswerConfirm" autocomplete="off">
                     <mat-error *ngIf="securityAnswerConfirm.touched && securityAnswerConfirm.hasError('required')">
