--- a/client/src/app/styles/styles.scss
+++ b/client/src/app/styles/styles.scss
@@ -26,3 +26,8 @@ body {
     padding-left: 10px !important;
     padding-right: 10px !important;
 }
+
+// override form field padding
+mat-form-field.mat-form-field-invalid {
+    padding-bottom: 15px !important;
+}
