--- a/client/src/app/public/pages/forgot-password/new-password/new-password.component.html
+++ b/client/src/app/public/pages/forgot-password/new-password/new-password.component.html
@@ -15,7 +15,7 @@
                 <form class="col-12" [formGroup]="form" (ngSubmit)="setNewPassword()">
                     <div class="row">
                         <mat-form-field color="accent" class="col-sm-6 col-12">
-                            <input matInput type="password" id="password" placeholder="New Password"
+                            <input matInput type="password" id="Password" placeholder="New Password"
                                 formControlName="password" autocomplete="off">
                             <mat-error *ngIf="password.touched && password.hasError('required')">
                                 New password is required
@@ -23,7 +23,7 @@
                         </mat-form-field>
 
                         <mat-form-field color="accent" class="col-sm-6 col-12">
-                            <input matInput type="password" id="passwordConfirm" placeholder="Confirm New Password"
+                            <input matInput type="password" id="PasswordConfirm" placeholder="Confirm New Password"
                                 formControlName="passwordConfirm" autocomplete="off">
                             <mat-error
                                 *ngIf="passwordConfirm.touched && passwordConfirm.hasError('required')">
