--- a/client/src/app/public/pages/forgot-password/security-check/security-check.component.html
+++ b/client/src/app/public/pages/forgot-password/security-check/security-check.component.html
@@ -17,7 +17,7 @@
                         <mat-label class="col-12">{{securityQuestion}}</mat-label>
 
                         <mat-form-field color="accent" class="col-sm-6 col-12">
-                            <input matInput type="password" id="securityAnswer" placeholder="Answer"
+                            <input matInput type="password" id="SecurityAnswer" placeholder="Answer"
                                 formControlName="securityAnswer" autocomplete="off">
                             <mat-error *ngIf="securityAnswer.touched && securityAnswer.hasError('required')">
                                 Answer is required
@@ -25,7 +25,7 @@
                         </mat-form-field>
 
                         <mat-form-field color="accent" class="col-sm-6 col-12">
-                            <input matInput type="password" id="securityAnswerConfirm" placeholder="Confirm Answer"
+                            <input matInput type="password" id="SecurityAnswerConfirm" placeholder="Confirm Answer"
                                 formControlName="securityAnswerConfirm" autocomplete="off">
                             <mat-error
                                 *ngIf="securityAnswerConfirm.touched && securityAnswerConfirm.hasError('required')">
