--- a/client/src/app/public/pages/login/login.component.html
+++ b/client/src/app/public/pages/login/login.component.html
@@ -9,7 +9,7 @@
                 <form class="col-12" [formGroup]="form" (ngSubmit)="login()">
                     <div class="row">
                         <mat-form-field color="accent" class="col-12">
-                            <input matInput id="email" type="email" placeholder="Email" formControlName="email">
+                            <input matInput id="Email" type="email" placeholder="Email" formControlName="email">
                             <mat-error *ngIf="email.touched && email.hasError('required')">
                                 Email is required
                             </mat-error>
@@ -19,7 +19,7 @@
                         </mat-form-field>
 
                         <mat-form-field color="accent" class="col-12 pb-2">
-                            <input matInput id="password" type="password" placeholder="Password"
+                            <input matInput id="Password" type="password" placeholder="Password"
                                 formControlName="password">
                             <mat-error *ngIf="password.touched && password.hasError('required')">
                                 Password is required
