--- a/client/src/app/private/components/page-footer/page-footer.component.html
+++ b/client/src/app/private/components/page-footer/page-footer.component.html
@@ -2,35 +2,37 @@
     <div class="flex-grow-1 overflow-y-scroll">
         <ng-content></ng-content>
     </div>
-    <div id="footer" class="row mx-0 w-100 flex-shrink-1 min-h-60px">
-        <ng-container *ngTemplateOutlet="buttonTemplate;context:{
-                icon: 'videogame_asset', tooltipText: 'Games', route: './private/public-rooms'
-            }">
-        </ng-container>
-        <ng-container *ngTemplateOutlet="buttonTemplate;context:{
-            icon: 'note', tooltipText: 'Notes', route: './private/notes'
+    <div id="Footer" class="row mx-0 w-100 flex-shrink-1 h-60px">
+        <ng-container *ngTemplateOutlet="footerTemplate"></ng-container>
+    </div>
+</div>
+
+<ng-template #footerTemplate>
+    <div class="row mx-0 w-100 h-100 align-items-center">
+        <ng-container *ngTemplateOutlet="buttonTemplate; context:{
+            icon: 'videogame_asset', tooltipText: 'Games', route: './private/public-rooms'
         }">
         </ng-container>
-        <ng-container *ngTemplateOutlet="buttonTemplate;context:{
-            icon: 'question_answer', tooltipText: 'My Games', route: './private/my-rooms'
+        <ng-container *ngTemplateOutlet="buttonTemplate; context:{
+            icon: 'question_answer', tooltipText: 'My Rooms', route: './private/my-rooms'
         }">
         </ng-container>
-        <ng-container *ngTemplateOutlet="buttonTemplate;context:{
-            icon: 'people', tooltipText: 'Friends', route: './private/friends'
-                }">
-        </ng-container>
-        <ng-container *ngTemplateOutlet="buttonTemplate;context:{
+        <ng-container *ngTemplateOutlet="buttonTemplate; context:{
             icon: 'person_outline', tooltipText: 'Profile', route: './private/profile'
         }">
         </ng-container>
     </div>
-</div>
+</ng-template>
 
 <ng-template #buttonTemplate let-icon="icon" let-tooltipText="tooltipText" let-route="route">
-    <div class="button col p-0 h-100" [matTooltip]="tooltipText" tooltipClass>
+    <div class="col p-0 h-100" [matTooltip]="tooltipText" tooltipClass>
         <button mat-stroked-button color="primary" type="button" class="p-0 min-w-100 rounded-0 h-100"
             (click)="goToRoute(route)">
             <app-icon [icon]="icon" size="30"></app-icon>
         </button>
     </div>
+</ng-template>
+
+<ng-template #columnBreak>
+    <div class="h-100 border border-secondary"></div>
 </ng-template>
