--- a/client/src/app/private/pages/create-room/create-room.component.html
+++ b/client/src/app/private/pages/create-room/create-room.component.html
@@ -15,7 +15,7 @@
                     </mat-form-field>
 
                     <mat-form-field color="accent" class="col-12">
-                        <input matInput type="text" id="description" placeholder="Description" formControlName="description">
+                        <input matInput type="text" id="RoomDescription" placeholder="Description" formControlName="description">
                     </mat-form-field>
 
                     <div class="col-12">
