--- a/client/src/app/private/pages/profile/profile.component.html
+++ b/client/src/app/private/pages/profile/profile.component.html
@@ -9,6 +9,17 @@
             <hr class="title-break w-100">
 
             <div class="col-12 text-center">
+                <button mat-stroked-button type="button" (click)="goToFriendsList()">
+                    <div class="row mx-0">
+                        <div>Friends</div>
+                        <div class="pb-1">
+                            <app-icon icon="people"></app-icon>
+                        </div>
+                    </div>
+                </button>
+            </div>
+
+            <div class="col-12 text-center">
                 <button mat-stroked-button color="warn" type="button" (click)="logOut()">
                     <div class="row mx-0">
                         <div>Log out</div>
