--- a/client/src/app/public/pages/create-account/create-account.component.html
+++ b/client/src/app/public/pages/create-account/create-account.component.html
@@ -54,7 +54,7 @@
                     </mat-error>
                 </div>
 
-                <div class="col-12 pt-2">
+                <div class="col-12 pt-3 pb-1">
                     <mat-hint>
                         <small>
                             If you forget your password, the following security question and answer will
